--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,3 +8,27 @@ body,
 html {
   height: 100%;
 }
+
+.legend {
+  background: white;
+  padding: 15px;
+  border-radius: 10px;
+}
+
+.legend i {
+  float: left;
+  width: 20px;
+  margin-right: 5px;
+}
+
+.leaflet-bottom.leaflet-left {
+  width: 90%;
+}
+
+.leaflet-control-container .leaflet-timeline-controls {
+  width: 100%;
+  box-sizing: border-box;
+  margin: 0;
+  margin-bottom: 15px;
+
+}
